Fix main h3 font-size and padding on mobile

--- a/app/styles/_main.scss
+++ b/app/styles/_main.scss
@@ -6,7 +6,7 @@ main {
           animation: fadeIn 0.2s ease-out 0.4s 1 normal forwards;
 
   h3 {
-    font-size: 38px;
+    font-size: 43px;
     margin: 0;
     padding: 50px 20px 10px 20px;
   }
@@ -226,7 +226,8 @@ main {
 @media screen and (max-device-width: 767px) {
   main {
     h3 {
-      font-size: 4.96vw;
+      font-size: 5.61vw;
+      padding: 6.52% 2.61% 1.30% 2.61%;
     }
   }
 
